[package]
name = "ssh-agent-fixer"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "ssh_agent_fixer"

[[bin]]
name = "ssh-agent-probe"
path = "src/bin/probe.rs"

[[bin]]
name = "ssh-agent-mux"
path = "src/bin/mux.rs"

[dependencies]
anyhow = "1"
arc-swap = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
libc = "0.2"
log = "0.4"
sha2 = "0.10"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3"
