[package]
name = "ssh-agent-mux"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "ssh_agent_mux"

[[bin]]
name = "ssh-agent-probe"
path = "src/bin/probe.rs"

[[bin]]
name = "ssh-agent-mux"
path = "src/bin/mux.rs"

[dependencies]
anyhow = "1"
arc-swap = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
inotify = { version = "0.11", default-features = false }
libc = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
signal-hook = "0.4"

[dev-dependencies]
tempfile = "3"
